# taonet

./: .gitignore  README.md
backend/: package.json
backend/demo/: demo-miner.js
backend/miner/: index.js
backend/src/: achievements.js  cron.js  difficulty.js  index.js  index_clean.js  middleware.js  penalties.js  skill.js  taskGenerator.js  taskQueue.js  tieredRateLimit.js  tokenVerification.js  wsHandler.js
backend/src/controllers/: minerController.js  rewardController.js  taskController.js  validationController.js
backend/src/models/: Activity.js  Airdrop.js  Analytics.js  Anchor.js  ApiKey.js  InferenceProof.js  Jackpot.js  Knowledge.js  Miner.js  Notification.js  Penalty.js  Reward.js  Task.js  Tournament.js  Validation.js
backend/src/routes/: activity.js  airdrops.js  analytics.js  apiKeys.js  auth.js  batch.js  chat.js  export.js  game.js  gamification.js  miners.js  monitoring.js  notifications.js  playground.js  proofs.js  rewards.js  stats.js  tasks.js  tournaments.js  validations.js
backend/src/services/: airdropService.js  cron.js  cronJobs.js  rewardEngine.js  solanaAnchor.js  taskDifficulty.js  taskGenerator.js
frontend/: achievements.html  admin.html  app.js  dashboard.html  developers.html  docs.html  health.html  history.html  index.html  leaderboard.html  manifest.json  mine.html  monitor.html  package-lock.json  package.json  playground.html  referrals.html  rewards.html  sdk.js  styles.css  sw.js  taonet.js  token.html  tournaments.html  vercel.json
frontend/assets/: index-BCT3ppdh.css  index-CpJi0gPr.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx  Navbar.css  Navbar.jsx  SupportChat.css  SupportChat.jsx  TaoNetChat.css  TaoNetChat.jsx
frontend/src/context/: MiningContext.jsx  WalletContext.jsx
frontend/src/lib/: inference.js
frontend/src/pages/: Achievements.css  Achievements.jsx  Dashboard.css  Dashboard.jsx  Developers.jsx  Docs.css  Docs.jsx  Explorer.css  Explorer.jsx  Home.css  Home.jsx  Leaderboard.css  Leaderboard.jsx  Mine.css  Mine.jsx  Playground.css  Playground.jsx  Referrals.css  Tournaments.css  Validators.css  Validators.jsx
frontend/src/services/: api.js
frontend/src/src/: App.jsx  index.css
frontend/src/src/components/: Footer.css  SupportChat.css  SupportChat.jsx
frontend/src/src/context/: MiningContext.jsx
frontend/src/src/pages/: Developers.css  Explorer.css  Home.css  Home.jsx  Leaderboard.css  Leaderboard.jsx  Mine.jsx  Playground.css  Referrals.jsx  Rewards.css  Rewards.jsx  Tournaments.jsx
frontend/src/src/styles/: index.css
frontend/src/styles/: index.css
l2/: Cargo.toml  README.md
l2/bridge/: Cargo.toml
l2/bridge/src/: deposit.rs  l1_client.rs  lib.rs  sync.rs  withdraw.rs
l2/consensus/: Cargo.toml
l2/consensus/src/: block.rs  lib.rs  miner_selection.rs  poi.rs  sequencer.rs
l2/node/: Cargo.toml
l2/node/src/: config.rs  main.rs  node.rs  rpc.rs  storage.rs
l2/runtime/: Cargo.toml
l2/runtime/src/: inference.rs  lib.rs  reward.rs  state.rs  task.rs  types.rs
skill/: SKILL.md  config.json  package-lock.json  package.json
skill/scripts/: mine.js  register.js  rewards.js  status.js
