[workspace]
resolver = "2"
members = [
    "runtime",
    "consensus",
    "bridge",
    "node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/taonet/taonet-l2"

[workspace.dependencies]
# Solana
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
anchor-lang = "0.29"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.3"
bincode = "1.3"

# Crypto
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"

# Networking
libp2p = "0.53"
tonic = "0.11"
prost = "0.12"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
base64 = "0.21"
chrono = "0.4"
