[package]
name = "taonet-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
taonet-runtime = { path = "../runtime" }
taonet-consensus = { path = "../consensus" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
