[package]
name = "taonet-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "taonet-node"
path = "src/main.rs"

[dependencies]
taonet-runtime = { path = "../runtime" }
taonet-consensus = { path = "../consensus" }
taonet-bridge = { path = "../bridge" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
libp2p = { workspace = true }
rocksdb = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
hex = { workspace = true }
